feat: 完成 AttentionPulse MVP 核心功能
✅ 阶段一：基础搭建

- Chrome Extension (Manifest v3) + Popup 界面

✅ 阶段二：内容感知与状态监听

- ContentExtractor 模块 + 浏览状态监听（滚动/DOM/点击/URL）

✅ 阶段三：标签判断与状态映射

- ContentTagger 模块（5类标签）

- Canvas 心跳图可视化（正弦波）

- 标签→颜色映射 + 平滑过渡动画

核心文件：

- content.js (996行) - 主逻辑

- contentExtractor.js - 内容提取

- contentTagger.js - 标签判断

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -16,7 +16,11 @@
   "content_scripts": [
     {
       "matches": ["*://*.xiaohongshu.com/*"],
-      "js": ["content/content.js"],
+      "js": [
+        "content/contentExtractor.js",
+        "content/contentTagger.js",
+        "content/content.js"
+      ],
       "run_at": "document_idle",
       "all_frames": false
     }
